--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Document</title>
+  <title>首页</title>
   <style>
     body {
       margin: 0;
